--- a/camera2_settings.html
+++ b/camera2_settings.html
@@ -38,7 +38,7 @@
 		<div class="padding-container"></div>
 		<div class="container-settings">
 			<div>
-				<p class="content_main" key="rec">Camera 2:</p>
+				<p class="content_main" key="header_cam2">Camera 2:</p>
 			</div>
 			<div id="toggles">
 				off/on
@@ -63,7 +63,6 @@
 
 					<img class="no-video" id="cam2_no_vid" src="img/no-video.png" alt="no-video" hidden>
 
-					<p style="text-align: center;" id="set_cam2" class="content_main" key="cam2">Camera 2</p>
 				</div>
 				<div id="canvas_field" class="canvas-field">
 					<h1 class = "sub_translate" key="utc">UTC Controller</h1>
@@ -117,27 +116,26 @@
 					<label class="menu--link" title="Network Settings">
 					<span class="menu--label" key="net_s">Network Settings</span>
 					</label>
-
-					<ul class="sub_menu">
-						<li class="sub_menu--item">
-							<a href="wlan.html" class="sub_menu--link">WLAN</a>
-						</li>
-						<li class="sub_menu--item">
-							<a href="ethernet.html" class="sub_menu--link">Ethernet</a>
-						</li>
-						<li class="sub_menu--item">
-							<a href="proxy.html" class="sub_menu--link">Proxy</a>
-						</li>
-						<li class="sub_menu--item">
-							<a href="web.html" class="sub_menu--link">Web</a>
-						</li>
-						<li class="sub_menu--item">
-							<a href="vpn.html" class="sub_menu--link">VPN</a>
-						</li>
-						<li class="sub_menu--item">
-							<a href="security.html" class="sub_menu--link sub_translate" key="secur">Security</a>
-						</li>	
-					</ul>
+				<ul class="sub_menu">
+					<li class="sub_menu--item">
+						<a href="wlan.html" class="sub_menu--link sub_translate" key="">WLAN</a>
+					</li>
+					<li class="sub_menu--item">
+						<a href="ethernet.html" class="sub_menu--link sub_translate"  key="ethernet">Ethernet</a>
+					</li>
+					<li class="sub_menu--item">
+						<a href="proxy.html" class="sub_menu--link sub_translate"  key="">Proxy</a>
+					</li>
+					<li class="sub_menu--item">
+						<a href="web.html" class="sub_menu--link sub_translate"  key="">Web</a>
+					</li>
+					<li class="sub_menu--item">
+						<a href="vpn.html" class="sub_menu--link sub_translate"  key="">VPN</a>
+					</li>
+					<li class="sub_menu--item">
+						<a href="security.html" class="sub_menu--link sub_translate sub_translate" key="secur">Security</a>
+					</li>	
+				</ul>
 				</li>
 
 				<li class="menu--item">
