--- a/gsm_gps.html
+++ b/gsm_gps.html
@@ -72,8 +72,9 @@
 			<h1 style="text-align: center;">Device Position</h1>
 			<div id="map">
 			</div>
-			<a id="current_location" href="#">Click here, for know current device location</a>
+			<a id="current_location" href="#">Click here, for know current device location <i class="fa fa-location-arrow" aria-hidden="true"></i></a>
 		</div>
+		
 	</div>
 	<nav class="vertical_nav">
 		<ul id="js-menu" class="menu">
@@ -89,25 +90,24 @@
 				<label class="menu--link" title="Network Settings">
 					<span class="menu--label" key="net_s">Network Settings</span>
 				</label>
-
 				<ul class="sub_menu">
 					<li class="sub_menu--item">
-						<a href="wlan.html" class="sub_menu--link">WLAN</a>
+						<a href="wlan.html" class="sub_menu--link sub_translate" key="">WLAN</a>
 					</li>
 					<li class="sub_menu--item">
-						<a href="ethernet.html" class="sub_menu--link">Ethernet</a>
+						<a href="ethernet.html" class="sub_menu--link sub_translate"  key="ethernet">Ethernet</a>
 					</li>
 					<li class="sub_menu--item">
-						<a href="proxy.html" class="sub_menu--link">Proxy</a>
+						<a href="proxy.html" class="sub_menu--link sub_translate"  key="">Proxy</a>
 					</li>
 					<li class="sub_menu--item">
-						<a href="web.html" class="sub_menu--link">Web</a>
+						<a href="web.html" class="sub_menu--link sub_translate"  key="">Web</a>
 					</li>
 					<li class="sub_menu--item">
-						<a href="vpn.html" class="sub_menu--link">VPN</a>
+						<a href="vpn.html" class="sub_menu--link sub_translate"  key="">VPN</a>
 					</li>
 					<li class="sub_menu--item">
-						<a href="security.html" class="sub_menu--link sub_translate" key="secur">Security</a>
+						<a href="security.html" class="sub_menu--link sub_translate sub_translate" key="secur">Security</a>
 					</li>	
 				</ul>
 			</li>
@@ -195,8 +195,8 @@
 			</li>
 		</ul>
 	</nav>
-	<script async defer
+<!-- 	<script async defer
 	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAt2ORK4FNWbdCNkROWdO2GrOt1b0q13Ts&callback=initMap">
-</script>
+</script> -->
 </body>
 </html>
