--- a/security.html
+++ b/security.html
@@ -115,26 +115,26 @@
 					<span class="menu--label" key="net_s">Network Settings</span>
 					</label>
 
-					<ul class="sub_menu">
-						<li class="sub_menu--item">
-							<a href="wlan.html" class="sub_menu--link">WLAN</a>
-						</li>
-						<li class="sub_menu--item">
-							<a href="ethernet.html" class="sub_menu--link">Ethernet</a>
-						</li>
-						<li class="sub_menu--item">
-							<a href="proxy.html" class="sub_menu--link">Proxy</a>
-						</li>
-						<li class="sub_menu--item">
-							<a href="web.html" class="sub_menu--link">Web</a>
-						</li>
-						<li class="sub_menu--item">
-							<a href="vpn.html" class="sub_menu--link">VPN</a>
-						</li>
-						<li class="sub_menu--item active">
-							<a href="security.html" class="sub_menu--link sub_translate" key="secur">Security</a>
-						</li>	
-					</ul>
+				<ul class="sub_menu">
+					<li class="sub_menu--item">
+						<a href="wlan.html" class="sub_menu--link sub_translate" key="">WLAN</a>
+					</li>
+					<li class="sub_menu--item">
+						<a href="ethernet.html" class="sub_menu--link sub_translate"  key="ethernet">Ethernet</a>
+					</li>
+					<li class="sub_menu--item">
+						<a href="proxy.html" class="sub_menu--link sub_translate"  key="">Proxy</a>
+					</li>
+					<li class="sub_menu--item">
+						<a href="web.html" class="sub_menu--link sub_translate"  key="">Web</a>
+					</li>
+					<li class="sub_menu--item">
+						<a href="vpn.html" class="sub_menu--link sub_translate"  key="">VPN</a>
+					</li>
+					<li class="sub_menu--item active">
+						<a href="security.html" class="sub_menu--link sub_translate sub_translate" key="secur">Security</a>
+					</li>	
+				</ul>
 				</li>
 
 				<li class="menu--item">
