--- a/camera1_settings.html
+++ b/camera1_settings.html
@@ -39,7 +39,7 @@
 		<div class="padding-container"></div>
 		<div class="container-settings">
 			<div>
-				<p class="content_main" key="rec">Camera 1:</p>
+				<p class="content_main" key="header_cam1">Camera 1:</p>
 			</div>
 			<div id="toggles">
 				off/on
@@ -65,7 +65,6 @@
 
 					<img class="no-video" id="cam1_no_vid" src="img/no-video.png" alt="no-video" hidden>
 
-					<p style="text-align: center;" id="set_cam1" class="content_main" key="cam1">Camera 1</p>
 				</div>
 				
 				<div id="canvas_field" class="canvas-field">
@@ -120,26 +119,26 @@
 					<span class="menu--label" key="net_s">Network Settings</span>
 					</label>
 
-					<ul class="sub_menu">
-						<li class="sub_menu--item">
-							<a href="wlan.html" class="sub_menu--link">WLAN</a>
-						</li>
-						<li class="sub_menu--item">
-							<a href="ethernet.html" class="sub_menu--link">Ethernet</a>
-						</li>
-						<li class="sub_menu--item">
-							<a href="proxy.html" class="sub_menu--link">Proxy</a>
-						</li>
-						<li class="sub_menu--item">
-							<a href="web.html" class="sub_menu--link">Web</a>
-						</li>
-						<li class="sub_menu--item">
-							<a href="vpn.html" class="sub_menu--link">VPN</a>
-						</li>
-						<li class="sub_menu--item">
-							<a href="security.html" class="sub_menu--link sub_translate" key="secur">Security</a>
-						</li>	
-					</ul>
+				<ul class="sub_menu">
+					<li class="sub_menu--item">
+						<a href="wlan.html" class="sub_menu--link sub_translate" key="">WLAN</a>
+					</li>
+					<li class="sub_menu--item">
+						<a href="ethernet.html" class="sub_menu--link sub_translate"  key="ethernet">Ethernet</a>
+					</li>
+					<li class="sub_menu--item">
+						<a href="proxy.html" class="sub_menu--link sub_translate"  key="">Proxy</a>
+					</li>
+					<li class="sub_menu--item">
+						<a href="web.html" class="sub_menu--link sub_translate"  key="">Web</a>
+					</li>
+					<li class="sub_menu--item">
+						<a href="vpn.html" class="sub_menu--link sub_translate"  key="">VPN</a>
+					</li>
+					<li class="sub_menu--item">
+						<a href="security.html" class="sub_menu--link sub_translate sub_translate" key="secur">Security</a>
+					</li>	
+				</ul>
 				</li>
 
 				<li class="menu--item">
