--- a/gsm_gps.html
+++ b/gsm_gps.html
@@ -195,8 +195,8 @@
 			</li>
 		</ul>
 	</nav>
-<!-- 	<script async defer
+	<script async defer
 	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAt2ORK4FNWbdCNkROWdO2GrOt1b0q13Ts&callback=initMap">
-</script> -->
+</script>
 </body>
 </html>
